# hestai-context-mcp

./: .gitignore  CLAUDE.md  README.md  crs_review.md  pyproject.toml  test_httpx.py
.github/workflows/: ci.yml
.hestai/north-star/: 000-HESTAI-CONTEXT-MCP-NORTH-STAR-SUMMARY.oct.md  000-HESTAI-CONTEXT-MCP-NORTH-STAR.md
.hestai/state/context/: PROJECT-CONTEXT.oct.md
docs/adr/: adr-0013-portable-session-state-via-storage-adapters.md  adr-00xx-portable-session-state-via-storage-adapters.md
src/hestai_context_mcp/: __init__.py  __main__.py  server.py
src/hestai_context_mcp/adapters/: __init__.py  ai_config.py  openai_compat_ai_client.py
src/hestai_context_mcp/core/: __init__.py  context_steward.py  focus.py  git_state.py  north_star_parser.py  phase.py  redaction.py  session.py  synthesis.py
src/hestai_context_mcp/core/transcript/: __init__.py  base.py  claude.py  registry.py
src/hestai_context_mcp/ports/: __init__.py  ai_client.py
src/hestai_context_mcp/storage/: __init__.py  classification.py  identity.py  identity_resolver.py  local_filesystem.py  outbox.py  projection.py  protocol.py  provenance.py  schema.py  snapshots.py  types.py
src/hestai_context_mcp/tools/: __init__.py  clock_in.py  clock_out.py  get_context.py  submit_review.py
src/hestai_context_mcp/tools/shared/: review_formats.py
tests/: __init__.py  conftest.py  test_server.py
tests/contract/: test_ai_client_protocol.py
tests/core/: test_context_steward.py  test_focus.py  test_git_state.py  test_redaction.py  test_session.py
tests/integration/: test_clock_in_ai_synthesis.py  test_clock_in_portable_state.py  test_clock_in_snapshot_error_count.py  test_clock_in_snapshot_error_handling.py  test_clock_out_dest_unbound.py  test_clock_out_portable_publish.py  test_clock_out_rework_redaction_failclose.py  test_clock_out_rework_skip_outbox.py  test_get_context_purity.py  test_pss_lifecycle_local_filesystem.py
tests/storage/: test_classification.py  test_classification_segment_strictness.py  test_identity.py  test_identity_resolver_failclosed.py  test_identity_schema_version_bool.py  test_identity_type_rejection.py  test_local_filesystem_adapter.py  test_local_filesystem_pagination.py  test_local_filesystem_path_layout_rework.py  test_outbox.py  test_outbox_unicode_decode.py  test_projection.py  test_provenance.py  test_schema.py  test_snapshots.py  test_source_invariants_pss.py  test_storage_protocol.py  test_types_contract.py
tests/tools/: test_clock_in.py  test_get_context.py  test_review_formats.py  test_submit_review.py
tests/unit/: test_source_invariants.py
tests/unit/adapters/: test_ai_config.py  test_openai_compat_ai_client.py
tests/unit/core/: test_context_steward.py  test_focus.py  test_git_state.py  test_north_star_parser.py  test_phase.py  test_redaction.py  test_session.py  test_synthesis.py  test_synthesis_ai_path.py
tests/unit/core/transcript/: __init__.py  test___init__.py  test_base.py  test_claude.py  test_registry.py
tests/unit/ports/: test_ai_client.py  test_ai_client_port.py
tests/unit/tools/: test_clock_in.py  test_clock_out.py
